Fixed the alignment on the list page and changed the survey tab to a Most Reviewed Parks

--- a/capstone-project/Capstone.Web/Content/StyleSheet.css
+++ b/capstone-project/Capstone.Web/Content/StyleSheet.css
@@ -112,15 +112,14 @@ section {
 #index-navbar {
     margin-bottom: 0px;
 }
+
 #index-layout-fullscreen {
     height: 97%;
     overflow: hidden;
 }
+
 .index-layout-section {
-    margin-right: 0px;
-    margin-left: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin: 0px;
     width: 100%;
     height: 90%;
     border-radius: 0px;
@@ -132,10 +131,12 @@ section {
 #myCarousel {
     height: 90%;
 }
+
 .c-wrapper div {
     margin-top: 3%;
     height: 100%;
 }
+
 .carousel-inner div img {
     margin: 0 auto;
     width: 95%;
@@ -144,22 +145,24 @@ section {
     border: solid 1px;
     border-color: black;
 }
+
 .carousel-inner {
     border: solid 4px;
     border-radius: 10px;
     border-color: black;
     background-color: #104547;
 }
+
 .c-wrapper {
     width: 90%;
     height: 100%;
     margin: 0 auto;
+}
 
-}
-.c-wrapper .item {
-    height: 100%;
-    margin-top: 1em;
-}
+    .c-wrapper .item {
+        height: 100%;
+        margin-top: 1em;
+    }
 
 #quotes {
     border: solid 0.1em;
@@ -167,29 +170,31 @@ section {
     background: rgba(280,280,280,.25);
     border-radius: 5px;
     height: auto;
-    margin-bottom: 22%;
+    margin-bottom: 15%;
 }
+
     #quotes p1 {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 1.5em;
-        color: #2F2F2F;
+        color: white;
     }
+
     #quotes p2 {
         font-style: italic;
-        color: #2F2F2F;
+        color: white;
         font-size: 125%;
     }
 
 /***** PARK LIST VIEW *****/
 .park-list-container {
-    text-align: center;
-    margin-left: 1.25em;
-    margin-right: 15%;
+    margin: 5%;
 }
 
     .park-list-container img {
-        width: 100%;
+        width: 90%;
         border-radius: 5px;
+        margin-left:5%;
+        margin-right:5%;
     }
 
 .park-list-text {
@@ -238,7 +243,6 @@ h3 {
     display: inline-block;
     min-width: 100%;
     margin-left: 1em;
-    float: left;
     text-align: left;
     font-size: 16px;
     border: solid;
